Added basic html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Inspiro Quote 😇</title>
+    <title>Find out your fortune 😇</title>
   </head>
   <body>
-    Hello World
+    <main>
+      <header>
+        Tell me your favourite color and find out what future awaits
+      </header>
+      <form>
+        <input type="text" name="" id="codeword" />
+        <input type="submit" value="submit" />
+      </form>
+      <div class="fortune">
+        Your secret desire to completely change your life will manifest.
+      </div>
+    </main>
+
     <footer>
       <small>
         With 💛 by
@@ -16,8 +28,12 @@
         </a>
 
         <br />
-        <a href="https://github.com/igaraeva" target="_blank">
+        <a href="https://github.com/igaraeva/fortune-teller" target="_blank">
           Open-sourced on GitHub
+        </a>
+        <br />
+        <a href="https://findyourfortune.netlify.app/" target="_blank">
+          Hosted on Netlify
         </a>
       </small>
     </footer>
