--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             autofocus
             required
           />
-          <input type="submit" value="Let's find out" class="button" />
+          <input type="submit" value="Find out" class="button" />
         </form>
         <div class="fortune">
           Your secret desire to completely change your life will manifest.
