Updated the html and integrated AI API into js

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Courgette&family=Gelasio:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Indie+Flower&display=swap"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
 
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 
@@ -19,16 +20,16 @@
   <body>
     <div class="container">
       <h1>
-        Tell me your favourite colour and find out what your future awaits...
+        Tell me your date of birth and find out what your future awaits...
       </h1>
       <main>
         <form id="fortune-generator">
           <input
             type="text"
             name=""
-            id="codeword"
-            class="codeword"
-            placeholder="Enter your favourite colour..."
+            id="date-of-birth"
+            class="date-of-birth"
+            placeholder="Enter your date of birth, e.g. 01/02/1990..."
             autofocus
             required
           />
