imrpoved css by adding a hidden class, improved AI prompt

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           />
           <input type="submit" value="Find out" class="button" />
         </form>
-        <div class="fortune" id="fortune"></div>
+        <div class="fortune hidden" id="fortune"></div>
       </main>
 
       <footer>
